fix code run button behind code

--- a/src/localpen/assets/localpen.css
+++ b/src/localpen/assets/localpen.css
@@ -150,6 +150,7 @@ body {
   bottom: 10px;
   right: 10px;
   opacity: 0.8;
+  z-index: 10;
 }
 
 #editor-container {
